ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: hello-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /dev-app(/|$)(.*)
        backend:
          service:
            name: dev-app-service
            port:
              number: 5678
      - pathType: Prefix
        path: /ops-app(/|$)(.*)
        backend:
          service:
            name: ops-app-service
            port:
              number: 5678
      - pathType: Prefix
        path: /kube-dash(/|$)(.*)
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
